--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -86,10 +86,10 @@ jobs:
           # Linux (glibc) - common Linux distributions
         - runner: ubuntu-22.04
           target: x86_64
-          manylinux: auto
+          manylinux: manylinux_2_28
         - runner: ubuntu-22.04
           target: aarch64
-          manylinux: auto
+          manylinux: manylinux_2_28
 
           # Linux (musl) - Alpine / minimal containers
         - runner: ubuntu-22.04
