--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -85,10 +85,10 @@ jobs:
         platform:
           # Linux (glibc) - common Linux distributions
         - runner: ubuntu-22.04
-          target: x86_64
+          target: x86_64-unknown-linux-gnu
           manylinux: manylinux_2_28
         - runner: ubuntu-22.04
-          target: aarch64
+          target: aarch64-unknown-linux-gnu
           manylinux: manylinux_2_28
 
           # Linux (musl) - Alpine / minimal containers
