Latest reqwest with Openssl and zig compilation targets with caches on win/mac

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -88,7 +88,7 @@ jobs:
           target: x86_64-unknown-linux-gnu
           manylinux: manylinux_2_34
         - runner: ubuntu-22.04
-          target: aarch64-unknown-linux-gnu
+          target: aarch64
           manylinux: manylinux_2_34
 
           # Linux (musl) - Alpine / minimal containers
@@ -136,31 +136,13 @@ jobs:
           ${{ runner.os }}-cargo-
 
     - name: Build wheels
-      uses: PyO3/maturin-action@v1
-      env:
-        CFLAGS_aarch64_unknown_linux_gnu: "-D__ARM_ARCH=8"
+      uses: messense/maturin-action@v1
       with:
         target: ${{ matrix.platform.target }}
-        args: --release --out dist --find-interpreter
-        sccache: 'true'
+        args: --release --out dist --find-interpreter ${{ matrix.platform.runner == 'ubuntu-22.04' && '--zig' || '' }}
+        sccache: ${{ matrix.platform.runner != 'ubuntu-22.04' }}
         manylinux: ${{ matrix.platform.manylinux }}
         working-directory: python
-        before-script-linux: |
-          set -eux
-          # Install OpenSSL development packages for glibc builds
-          # musl builds will use vendored OpenSSL (configured in Cargo.toml)
-          if command -v yum >/dev/null 2>&1; then
-            # manylinux2014 / CentOS 7 family
-            yum -y install openssl-devel
-          elif command -v apt-get >/dev/null 2>&1; then
-            # Debian/Ubuntu family
-            apt-get update && apt-get install -y libssl-dev
-          elif command -v apk >/dev/null 2>&1; then
-            # musllinux (Alpine) - vendored OpenSSL will be used instead
-            echo "Alpine/musl detected - using vendored OpenSSL from Cargo.toml"
-          else
-            echo "Unknown package manager. Skipping OpenSSL installation."
-          fi
 
     - name: Verify wheel contents
       shell: bash
